--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property="og:type" content="website">\
         <meta property="og:description" content=" ">\
         <meta property="og:locale" content="fr_FR">\
-        <meta property="og:url" content="https://www.gendarmerie.fr/">\
+        <meta property="og:url" content="https://gendarmerie-aol.netlify.com">\
         <meta property="og:site_name" content="www.gendarmerie.fr">\
 \
 	    <meta name="theme-color" content="#FFFFFF">\
